--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "lib",
     "target": "es5",
-    "module": "es6",
+    "module": "CommonJS",
     "lib": ["ESNext", "DOM"],
     "strict": true,
     "esModuleInterop": true,
